# ARCADA

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
arcada/: __init__.py  api.py  cli.py  github_clone.py  models.py  orchestrator.py  reasoning.py  report.py
arcada/analysis/: call_graph.py  dep_graph.py
arcada/sandbox/: executor.py
arcada/scanners/: __init__.py  abuse.py  advanced_analysis.py  agent_risks.py  ai_risks.py  base.py  behavior.py  binary.py  cicd.py  code_exec.py  crossfile_taint.py  crypto_risks.py  dep_behavior.py  dep_source.py  dependency.py  ecosystem_parsers.py  go_risks.py  homoglyph.py  js_ast.py  llm_exfil.py  ml_detector.py  model_security.py  network.py  obfuscation.py  osv_integration.py  package_metadata.py  reachability.py  runtime.py  sandbox.py  sca.py  secrets.py  supply_chain.py  taint_analysis.py  taint_scanner.py  threat_intel.py  trust_model.py
tests/: conftest.py  test_dep_behavior.py  test_dep_source.py  test_github_clone.py  test_new_scanners.py  test_package_metadata.py  test_scanners.py  test_security.py
